<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PathshalaTransportSystem</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello add vehicle fragment</string>
    <string name="default_id_screen">Default Id Screen</string>
    <string name="enter_bus_id_string">Enter Bus Id String</string>
    <string name="enter_route_id_string">Enter Route Id String</string>
    <string name="max_no_of_stops_per_route">Max No of stops per route</string>
    <string name="modify_hirarchy">Modify Hirarchy</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="plus">+</string>
    <string name="backarrowbutton">backclick</string>
    <string name="create_route">Route</string>
    <string name="enter_route_number">Enter Route Number</string>
    <string name="select_bus_number">Select Bus Number</string>
    <string name="enter_vehicle_gps_number">Vehicle GPS Number</string>
    <string name="vehicle_starting_point_towards_school">Starting Point(Towards school)</string>
    <string name="vehicle_starting_point_towards_home">Starting Point(Towards Home)</string>
    <string name="vehicle_ending_point">Ending point</string>
    <string name="enter_location_manually">Enter Location Manually</string>
    <string name="enter_stop_name">Enter Stop Name</string>
    <string name="enter_latitude_point">Enter Latitude point</string>
    <string name="enter_longitude">Enter Longitude</string>
    <string name="enter_start_distance">Enter start distance(km)</string>
    <string name="enter_approx_time">Enter approx time</string>
    <string name="image_name_jpg">Image_name.jpg</string>
    <string name="todo">TODO</string>
    <string name="_45">45</string>
    <string name="hosa02_40" tools:ignore="TypographyDashes">HOSA02-40</string>
    <string name="_5545wd4ad0">5545wd4ad0</string>
    <string name="save">save</string>
    <string name="set_barrier">Set Barrier</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="schedule_title">Schedule Title</string>
    <string name="schedule_type">Schedule Type</string>
    <string name="vehicle_seating_capacity">Vehicle Seating Capacity</string>
    <string name="including_driver">(including driver)</string>
    <string name="basic_details">Basic Vehicle Details</string>
    <string name="class_of_vehicle">Class of Vehicle</string>
    <string name="enter_vehicle_id">Enter id</string>
    <string name="vehicle_registration_number">Registration Number</string>
    <string name="vehicle_name">Name</string>
    <string name="vehicle_gps_details">GPS Details</string>
    <string name="registration_details">Registration Details</string>
    <string name="type_of_body">Type of body</string>
    <string name="enter_chasis_number">Enter Chasis Number</string>
    <string name="vehicle_engine_number">Vehicle Engine Number</string>
    <string name="vehicle_maker_s_name">Vehicle Maker\'s Name</string>
    <string name="vehicle_model_number">Vehicle Model Number</string>
    <string name="vehicle_manufacturing_year">Vehicle manufacturing Year</string>
    <string name="vehicle_seating_capacity_including_driver">Vehicle seating capacity(including driver</string>
    <string name="vehicle_registering_authority">Vehicle Registering Authority</string>
    <string name="vehicle_registering_state">Vehicle Registering State</string>
    <string name="previous_owner_name">Previous Owner Name</string>
    <string name="previous_owner_puchased_cost">Previous Owner puchased Cost</string>
    <string name="perticulars_of_previous_registration_and_register_number_if_any">Perticulars of previous Registration and register number(if any)</string>
    <string name="previous_owner_purchased_date">Previous Owner purchased Date</string>
    <string name="servicing_details">Servicing Details</string>
    <string name="total_free_service">Total Free service</string>
    <string name="remaining_free_service">Remaining Free service</string>
    <string name="next_service_in_kms">Next service in(KMS)</string>
    <string name="next_service_in_days">Next service in(days)</string>
    <string name="last_serving_date">Last serving date</string>
    <string name="send_service_alert">Send service alert</string>
    <string name="insurance_details">Insurance Details</string>
    <string name="insurance_type">Insurance Type</string>
    <string name="insurance_number">Insurance number</string>
    <string name="insurance_date">Insurance Date</string>
    <string name="renewed_date">Renewed Date</string>
    <string name="next_renewal_date">Next Renewal Date</string>
    <string name="send_renewal_alert">Send Renewal Alert</string>
    <string name="agent_id">Agent id</string>
    <string name="agent_name">Agent Name</string>
    <string name="insurance_company_name">Insurance Company Name</string>
    <string name="agent_contact_number">Agent Contact number</string>
    <string name="insurance_company_number">Insurance Company number</string>
    <string name="other_documents">Other Documents</string>
    <string name="rc_number">Rc Number</string>
    <string name="noc_number">NOC Number</string>
    <string name="pollution_certificate_details">Pollution Certificate Details</string>
    <string name="pollution_certificate_number">Pollution Certificate number</string>
    <string name="pollution_certificate_issue_date">Pollution Certificate issue Date</string>
    <string name="pollution_certificate_renewal_date">Pollution Certificate Renewal Date</string>
    <string name="fitness_certificate_details">Fitness Certificate Details</string>
    <string name="vehicle_fitness_certificate_number">Vehicle fitness Certificate number</string>
    <string name="vehicle_fitness_issue_date">Vehicle fitness issue Date</string>
    <string name="vehicle_fitness_renewal_date">Vehicle fitness Renewal Date</string>
    <string name="tax_permit_certificate_details">Tax permit Certificate Details</string>
    <string name="tax_permit_number">Tax permit number</string>
    <string name="tax_payable_date">Tax payable Date</string>
    <string name="tax_permit_amount">Tax Permit amount</string>
    <string name="financial_details">Financial Details</string>
    <string name="vehicle_purchased_price">Vehicle purchased price</string>
    <string name="loan_details_if_any">Loan details if any</string>
    <string name="loan_account_number">Loan Account Number</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="loan_interest_rate">Loan Interest rate</string>
    <string name="down_payment">Down payment</string>
    <string name="loan_approved_date">Loan Approved date</string>
    <string name="loan_due_date">Loan Due date</string>
    <string name="loan_end_date">Loan End date</string>
    <string name="loan_emi_amount">Loan Emi amount</string>
    <string name="other_expenses_if_second_hand">Other Expenses(if Second hand)</string>
    <string name="bank_name">Bank Name</string>
    <string name="maintenance_amount">Maintenance Amount</string>
    <string name="repairing_charges">Repairing charges</string>
    <string name="reamarks">Reamarks</string>
    <string name="loan_document_images">Loan Images</string>
    <string name="vehicle_fitness">Vehicle fitness</string>
    <string name="vehicle_images">Vehicle Images</string>
    <string name="clickbutton">clickButton</string>
    <string name="select_from_camera">Select From Camera</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="add_sibling">Add Siblings</string>
    <string name="student_name">Student Name</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="choose_image">Choose Image</string>
    <string name="stop_images">Stop Images</string>
</resources>
