<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.varadhismartek.pathshalatransportsystem.Fragment.Selectaction">


        <Button
            android:id="@+id/btnsetBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_shape_round"
            android:padding="8dp"
            android:text="@string/set_barrier"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btnaddvehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_shape_round"
            android:padding="8dp"
            android:text="@string/add_vehicle"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/btncreateroute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/btn_shape_round"
            android:padding="8dp"
            android:text="@string/create_route"
            style="?android:attr/borderlessButtonStyle"/>



</LinearLayout>
