<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Ll_both_match_heading"
    android:background="@drawable/card_shape">

    <LinearLayout
        style="@style/Ll_normal_vtl"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <LinearLayout
            android:background="@drawable/card_shape"
            style="@style/Ll_both_match_heading">

            <LinearLayout
                style="@style/Ll_normal_vtl"
                android:id="@+id/holidays_layout"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/event_name_TI"
                    android:layout_weight="5"
                    style="@style/textinputlaout_wmatch_hwrap">

                    <EditText
                        android:id="@+id/editext_evnetnme_cal"
                        android:hint="@string/schedule_title"
                        style="@style/edittext_normal" />
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:layout_width="@dimen/dp30"
                    android:layout_height="@dimen/dp30"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/dp10"
                    android:src="@drawable/edit2"
                    android:contentDescription="@string/backarrowbutton"/>


            </LinearLayout>

            <LinearLayout
                style="@style/Ll_normal_htl">



                <TextView
                    style="@style/tv_normal_mrgn_pad"
                    android:text="@string/schedule_type"
                    android:layout_weight="5"/>

                <Spinner
                    style="@style/spinner_normal_mrgn_pad"
                    android:layout_weight="1">
                </Spinner>
            </LinearLayout>


            <LinearLayout
                style="@style/Ll_normal_htl_mrgn_pad">

                <TextView
                    style="@style/tv_normal"
                    android:text="@string/vehicle_seating_capacity"
                    />

                <TextView
                    style="@style/tv_normal"
                    android:textSize="@dimen/sp10"
                    android:text="@string/including_driver">
                </TextView>


                <TextView
                    style="@style/tv_normal"
                    android:text="45"
                    android:layout_weight="2"
                    android:gravity="center">
                </TextView>


            </LinearLayout>

            <LinearLayout
                style="@style/Ll_normal_htl_mrgn_pad">

                <TextView
                    style="@style/tv_normal"
                    android:layout_weight="1"
                    android:text="Vehicle Name"
                    />

                <TextView
                    style="@style/tv_normal"
                    android:text="HOSA02-40"
                    android:layout_weight="1"
                    android:gravity="center">
                </TextView>


            </LinearLayout>

            <LinearLayout
                style="@style/Ll_normal_htl_mrgn_pad">

                <TextView
                    style="@style/tv_normal"
                    android:layout_weight="1"
                    android:text="Enter Vehicle GPS Number"
                    />

                <TextView
                    style="@style/tv_normal"
                    android:text="5545wd4ad0"
                    android:layout_weight="1"
                    android:gravity="center">
                </TextView>


            </LinearLayout>



            <LinearLayout
                style="@style/Ll_normal_htl">

                <android.support.design.widget.TextInputLayout
                    style="@style/textinputlaout_weight"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/dp5"
                    android:padding="@dimen/dp0">

                    <EditText
                        style="@style/edittext_normal"
                        android:hint="Vehicle Starting "/>


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/textinputlaout_weight"
                    android:layout_margin="@dimen/dp5"
                    android:padding="@dimen/dp0"
                    android:layout_weight="1">

                    <EditText
                        style="@style/edittext_normal"
                        android:hint="Vehicle ending point"/>


                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/Ll_normal_htl">

                <android.support.design.widget.TextInputLayout
                    style="@style/textinputlaout_weight"
                    android:layout_margin="@dimen/dp5"
                    android:padding="@dimen/dp0"
                    android:layout_weight="1">

                    <EditText
                        style="@style/edittext_normal"
                        android:hint="Vehicle Starting "/>


                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    style="@style/textinputlaout_weight"
                    android:layout_margin="@dimen/dp5"
                    android:padding="@dimen/dp0"
                    android:layout_weight="1">

                    <EditText
                        style="@style/edittext_normal"
                        android:hint="Vehicle ending point"/>


                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout android:layout_marginTop="5dp"
                style="@style/Ll_normal_htl"
                android:background="@color/backgroundColor"
                xmlns:android="http://schemas.android.com/apk/res/android">

                <TextView
                    android:id="@+id/shifts"
                    android:text="Number of Shifts"
                    style="@style/tv_normal"
                    android:layout_width="@dimen/dp0"
                    android:layout_weight="3"
                    android:layout_margin="@dimen/dp5"/>





                <LinearLayout
                    style="@style/Ll_weight_htl"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@drawable/shape_border"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/dp0">

                    <TextView
                        style="@style/textview_1"
                        android:text="-" />

                    <TextView

                        style="@style/text_2"
                        android:text="1" />

                    <TextView
                        style="@style/textview12"
                        android:layout_height="match_parent"
                        android:text="+" />

                </LinearLayout>






            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="@dimen/dp5"
                app:cardCornerRadius="@dimen/dp5"
                android:layout_margin="@dimen/dp2">

                <LinearLayout
                    style="@style/Ll_normal_vtl">



                    <LinearLayout
                        style="@style/Ll_normal_htl_mrgn_pad"
                        android:background="@drawable/card_shape">

                        <TextView
                            style="@style/tv_normal"
                            android:layout_weight="1"
                            android:text="Vehicle Name"
                            />

                        <Switch
                            android:id="@+id/switch1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />



                    </LinearLayout>

                    <android.support.design.widget.TextInputLayout
                        style="@style/textinputlaout_wmatch_hwrap"
                        >

                        <EditText
                            style="@style/edittext_normal"
                            android:hint="Vehicle ending point"/>


                    </android.support.design.widget.TextInputLayout>



                    <LinearLayout
                        style="@style/Ll_normal_htl">

                        <android.support.design.widget.TextInputLayout
                            style="@style/textinputlaout_weight"
                            android:layout_weight="1">

                            <EditText
                                style="@style/edittext_normal"
                                android:hint="Enter Latitude point"/>


                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            style="@style/textinputlaout_weight"
                            android:layout_weight="1">

                            <EditText
                                style="@style/edittext_normal"
                                android:hint="Enter Longitude"
                                android:drawableRight="@drawable/ic_my_location_black_24dp"/>


                        </android.support.design.widget.TextInputLayout>
                    </LinearLayout>


                    <LinearLayout
                        style="@style/Ll_normal_htl">

                        <android.support.design.widget.TextInputLayout
                            style="@style/textinputlaout_weight"
                            android:layout_weight="1">

                            <EditText
                                style="@style/edittext_normal"
                                android:hint="Enter start distance"/>


                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            style="@style/textinputlaout_weight"
                            android:layout_weight="1">

                            <EditText
                                style="@style/edittext_normal"
                                android:hint="Enter  approx time"/>


                        </android.support.design.widget.TextInputLayout>







                    </LinearLayout>


                    <android.support.v7.widget.CardView
                        style="@style/cardViewStyle"
                        app:cardBackgroundColor="@color/backgroundColor"
                        android:layout_margin="@dimen/dp10"
                        app:cardCornerRadius="@dimen/dp5"
                        app:cardElevation="@dimen/dp5">

                        <LinearLayout
                            style="@style/Ll_normal_vtl">

                            <ImageView
                                android:id="@+id/image_picker_calendar"
                                android:layout_width="match_parent"
                                android:layout_height="80dp"
                                android:layout_weight="1"
                                android:layout_margin="@dimen/dp10"
                                android:background="#fff"
                                android:src="@drawable/ic_attachment_black_24dp" />

                            <TextView
                                style="@style/tv_normal"
                                android:layout_width="match_parent"
                                android:text="Image_name.jpg"
                                android:layout_margin="@dimen/dp2"
                                android:gravity="center"
                                android:padding="@dimen/dp5"
                                android:background="@color/white"/>

                        </LinearLayout>

                    </android.support.v7.widget.CardView>

                    <Button
                        android:text="+"
                        style="@style/button_normal_mrgn_pad"
                        android:gravity="center"
                        android:layout_gravity="center"/>

                </LinearLayout>



            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                style="@style/cardViewStyle"
                android:layout_margin="@dimen/dp10"
                app:cardCornerRadius="@dimen/dp5"
                app:cardElevation="@dimen/dp5">


                <LinearLayout
                    style="@style/Ll_normal_vtl"
                    android:layout_margin="@dimen/dp10"
                    android:background="@color/colorPrimary"
                    android:layout_height="@dimen/dp150">




                </LinearLayout>

            </android.support.v7.widget.CardView>






        </LinearLayout>



    </LinearLayout>



</ScrollView>